updated all mdx project files to follow new structure

--- a/content/projects/2048.mdx
+++ b/content/projects/2048.mdx
@@ -8,34 +8,70 @@ date: "2020-07-15"
 link: "https://lilianzlettuce.github.io/2048"
 ---
 
-# 2048
+<ProjectHeader
+  title="2048"
+  description="A browser-based implementation of the classic 2048 game, featuring original styling and multiple themes."
+>
+  <ProjectInfo
+    items={[
+      { label: "Tags", values: ["JavaScript", "HTML", "CSS", "Game Development", "Puzzle Game", "Web Games", "Classic Games"] },
+      { label: "Categories", values: ["dev", "design"] },
+      { label: "Date", values: ["2020-07-15"] },
+    ]}
+  />
+</ProjectHeader>
 
-A browser-based implementation of the classic 2048 puzzle game, featuring original styling and multiple themes for an enhanced gaming experience.
+<SplitSection>
+  <SectionColumn size={4}>
+    ###### Background
+  </SectionColumn>
+  <SectionColumn size={12}>
+    #### 2048
 
-## Overview
+    <div className="text-lg">
+      A browser-based implementation of the classic 2048 puzzle game, featuring original styling and multiple themes for an enhanced gaming experience.
+    </div>
 
-This project recreates the popular 2048 sliding tile puzzle game with custom styling and multiple visual themes. The implementation focuses on smooth gameplay and responsive design across all devices.
+    <br/><br/><br/>
 
-## Key Features
+    #### Overview
+    This project recreates the popular 2048 sliding tile puzzle game with custom styling and multiple visual themes. The implementation focuses on smooth gameplay and responsive design across all devices.
+  </SectionColumn>
+  <SectionColumn size={2}>
+  </SectionColumn>
+</SplitSection>
 
-- **Classic Gameplay**: Faithful recreation of the original 2048 mechanics
-- **Multiple Themes**: Various visual styles to customize the experience
-- **Responsive Design**: Optimized for desktop and mobile play
-- **Smooth Animations**: Fluid tile movements and transitions
-- **Score Tracking**: Persistent high score system
-- **Touch Controls**: Full support for mobile touch interaction
+<SplitSection>
+  <SectionColumn size={4}>
+    ###### Implementation
+  </SectionColumn>
+  <SectionColumn size={12}>
+    #### Key Features
+    - **Classic Gameplay**: Faithful recreation of the original 2048 mechanics
+    - **Multiple Themes**: Various visual styles to customize the experience
+    - **Responsive Design**: Optimized for desktop and mobile play
+    - **Smooth Animations**: Fluid tile movements and transitions
+    - **Score Tracking**: Persistent high score system
+    - **Touch Controls**: Full support for mobile touch interaction
 
-## Technical Implementation
+    <br/><br/><br/>
 
-Built with vanilla JavaScript, HTML, and CSS, the project demonstrates solid understanding of web development fundamentals and game logic implementation.
+    #### Technical Implementation
+    Built with vanilla JavaScript, HTML, and CSS, the project demonstrates solid understanding of web development fundamentals and game logic implementation.
 
-## Game Mechanics
+    <br/><br/><br/>
 
-The game follows the classic 2048 rules where players slide numbered tiles to combine them and reach the elusive 2048 tile, with strategic thinking and planning required for success.
+    #### Game Mechanics
+    The game follows the classic 2048 rules where players slide numbered tiles to combine them and reach the elusive 2048 tile, with strategic thinking and planning required for success.
 
-## Future Enhancements
+    <br/><br/><br/>
 
-- Additional game modes and variations
-- Advanced statistics and analytics
-- Social sharing features
-- Custom theme creation tools 
+    #### Future Enhancements
+    - Additional game modes and variations
+    - Advanced statistics and analytics
+    - Social sharing features
+    - Custom theme creation tools
+  </SectionColumn>
+  <SectionColumn size={2}>
+  </SectionColumn>
+</SplitSection>
