--- a/content/projects/becoming.mdx
+++ b/content/projects/becoming.mdx
@@ -10,70 +10,82 @@ award: "Performance @ The International Conference on New Interfaces for Musical
 link: "https://youtu.be/WGYg-UNLEUU"
 ---
 
-<ProjectInfo 
-    roles={["Artist", "Developer"]} 
-    timeline="August 2024 - May 2025"
-    team={["Solo project"]}
-    type="Audiovisual Installation"
-/>
+<ProjectHeader
+  title="Becoming"
+  description="An interactive audio-visual device responding to analog interaction and environmental stimuli."
+>
+  <ProjectInfo
+    items={[
+      { label: "Tags", values: ["Arduino", "Processing", "Interactive Art", "Audio Visualization", "Hardware", "Sensors"] },
+      { label: "Categories", values: ["dev", "art"] },
+      { label: "Date", values: ["2025-05-01"] },
+      { label: "Award", values: ["Performance @ NIME"] },
+      { label: "Featured", values: ["true"] },
+      { label: "Role", values: ["Artist", "Developer"] },
+      { label: "Timeline", values: ["August 2024 - May 2025"] },
+      { label: "Team", values: ["Solo project"] },
+      { label: "Type", values: ["Audiovisual Installation"] },
+    ]}
+  />
+</ProjectHeader>
 
-An interactive audio-visual experience that bridges the gap between digital and physical interaction through custom hardware and environmental sensing.
+<SplitSection>
+  <SectionColumn size={4}>
+    ###### Background
+  </SectionColumn>
+  <SectionColumn size={12}>
+    #### Becoming
 
-## Overview
+    <div className="text-lg">
+      An interactive audio-visual experience that bridges the gap between digital and physical interaction through custom hardware and environmental sensing.
+    </div>
 
-Becoming is a custom playable device that responds to both interaction through an analog interface, and audiovisual stimuli detected from the surrounding environment. This project explores the relationship between human interaction, environmental data, and artistic expression.
+    <br/><br/><br/>
 
-## Key Features
+    #### Overview
+    Becoming is a custom playable device that responds to both interaction through an analog interface, and audiovisual stimuli detected from the surrounding environment. This project explores the relationship between human interaction, environmental data, and artistic expression.
+  </SectionColumn>
+  <SectionColumn size={2}>
+  </SectionColumn>
+</SplitSection>
 
-- **Custom Hardware Interface**: Analog controls for direct manipulation
-- **Environmental Sensing**: Real-time detection of surrounding stimuli
-- **Audio-Visual Response**: Dynamic feedback based on interaction and environment
-- **Interactive Art**: Blends technology with artistic expression
+<SplitSection>
+  <SectionColumn size={4}>
+    ###### Implementation
+  </SectionColumn>
+  <SectionColumn size={12}>
+    #### Key Features
+    - **Custom Hardware Interface**: Analog controls for direct manipulation
+    - **Environmental Sensing**: Real-time detection of surrounding stimuli
+    - **Audio-Visual Response**: Dynamic feedback based on interaction and environment
+    - **Interactive Art**: Blends technology with artistic expression
 
-1. hello
+    <br/><br/><br/>
 
-## Technical Implementation
+    #### Technical Implementation
+    The project combines Arduino for hardware control and Processing for audio-visual output, creating a seamless bridge between physical interaction and digital response.
 
-The project combines Arduino for hardware control and Processing for audio-visual output, creating a seamless bridge between physical interaction and digital response.
+    <br/><br/><br/>
 
-## Impact
+    #### Impact
+    This project has been selected for presentation at The International Conference on New Interfaces for Musical Expression (NIME), highlighting its contribution to the field of interactive music and art.
 
-This project has been selected for presentation at The International Conference on New Interfaces for Musical Expression (NIME), highlighting its contribution to the field of interactive music and art.
+    <br/><br/><br/>
 
-## Future Development
+    #### Future Development
+    - Enhanced environmental sensing capabilities
+    - Multi-user interaction support
+    - Integration with machine learning for adaptive responses
 
-- Enhanced environmental sensing capabilities
-- Multi-user interaction support
-- Integration with machine learning for adaptive responses 
+    <br/><br/><br/>
 
----
-
-| Syntax | Description |
-| ----------- | ----------- |
-| Header | Title |
-| Paragraph | Text |
-
----
-
-![Becoming photo 2](/img/becoming2.jpg "Becoming photo 2")
-
-![Becoming photo 3](/img/becoming3.png "Becoming photo 3")
-
-![Becoming photo 4](/img/becoming4.png "Becoming photo 4")
-
-> test
-
-<TechStack 
-  technologies={["Next.js", "TypeScript", "Tailwind CSS", "Prisma", "PostgreSQL", "Stripe", "NextAuth.js"]}
-  title="Technology Stack"
-/>
-
-<h1>another test </h1>
-
-**bold text**
-
-*italicized test*
-
-`code line`
-
-[NIME 2025](https://nime2025.org/proceedings/183.html)
+    #### Media
+    ![Becoming photo 2](/img/becoming2.jpg "Becoming photo 2")
+    
+    ![Becoming photo 3](/img/becoming3.png "Becoming photo 3")
+    
+    ![Becoming photo 4](/img/becoming4.png "Becoming photo 4")
+  </SectionColumn>
+  <SectionColumn size={2}>
+  </SectionColumn>
+</SplitSection>
