--- a/content/projects/bloog.mdx
+++ b/content/projects/bloog.mdx
@@ -8,34 +8,70 @@ date: "2021-05-15"
 link: "https://bloog-ef82f.web.app/"
 ---
 
-# BLOOG
+<ProjectHeader
+  title="BLOOG"
+  description="A notecard web app with React, Redux, and Firebase to enhance learning."
+>
+  <ProjectInfo
+    items={[
+      { label: "Tags", values: ["React", "Redux", "Firebase", "Study Tool", "Web App"] },
+      { label: "Categories", values: ["dev", "design"] },
+      { label: "Date", values: ["2021-05-15"] },
+    ]}
+  />
+</ProjectHeader>
 
-A comprehensive notecard web application designed to enhance learning through digital flashcards and study tools, built with modern web technologies.
+<SplitSection>
+  <SectionColumn size={4}>
+    ###### Background
+  </SectionColumn>
+  <SectionColumn size={12}>
+    #### BLOOG
 
-## Overview
+    <div className="text-lg">
+      A comprehensive notecard web application designed to enhance learning through digital flashcards and study tools, built with modern web technologies.
+    </div>
 
-BLOOG is a Quizlet-inspired web application that provides students and learners with a powerful platform for creating, organizing, and studying with digital notecards. The app leverages React, Redux, and Firebase to deliver a seamless user experience.
+    <br/><br/><br/>
 
-## Key Features
+    #### Overview
+    BLOOG is a Quizlet-inspired web application that provides students and learners with a powerful platform for creating, organizing, and studying with digital notecards. The app leverages React, Redux, and Firebase to deliver a seamless user experience.
+  </SectionColumn>
+  <SectionColumn size={2}>
+  </SectionColumn>
+</SplitSection>
 
-- **Digital Notecards**: Create and organize study materials
-- **Study Modes**: Multiple ways to review and test knowledge
-- **Cloud Storage**: Firebase integration for data persistence
-- **User Accounts**: Personalized study collections
-- **Responsive Design**: Works across all devices
-- **Real-Time Sync**: Updates across multiple devices
+<SplitSection>
+  <SectionColumn size={4}>
+    ###### Implementation
+  </SectionColumn>
+  <SectionColumn size={12}>
+    #### Key Features
+    - **Digital Notecards**: Create and organize study materials
+    - **Study Modes**: Multiple ways to review and test knowledge
+    - **Cloud Storage**: Firebase integration for data persistence
+    - **User Accounts**: Personalized study collections
+    - **Responsive Design**: Works across all devices
+    - **Real-Time Sync**: Updates across multiple devices
 
-## Technical Implementation
+    <br/><br/><br/>
 
-Built with React for the frontend, Redux for state management, and Firebase for backend services, the app demonstrates proficiency in modern web development stack.
+    #### Technical Implementation
+    Built with React for the frontend, Redux for state management, and Firebase for backend services, the app demonstrates proficiency in modern web development stack.
 
-## Educational Impact
+    <br/><br/><br/>
 
-The app serves as an effective study tool, helping users retain information through spaced repetition and interactive learning methods.
+    #### Educational Impact
+    The app serves as an effective study tool, helping users retain information through spaced repetition and interactive learning methods.
 
-## Future Enhancements
+    <br/><br/><br/>
 
-- Advanced study algorithms
-- Collaborative study groups
-- Progress tracking and analytics
-- Integration with educational platforms 
+    #### Future Enhancements
+    - Advanced study algorithms
+    - Collaborative study groups
+    - Progress tracking and analytics
+    - Integration with educational platforms
+  </SectionColumn>
+  <SectionColumn size={2}>
+  </SectionColumn>
+</SplitSection>
