--- a/content/projects/cero.mdx
+++ b/content/projects/cero.mdx
@@ -10,33 +10,71 @@ link: "https://lilianzlettuce.github.io/cero"
 featured: true
 ---
 
-# Cero
+<ProjectHeader
+  title="Cero"
+  description="An adventure/platformer built with JavaScript and melonJS, featuring immersive gameplay."
+>
+  <ProjectInfo
+    items={[
+      { label: "Tags", values: ["JavaScript", "Game Development", "melonJS", "Platformer", "Adventure Game", "Web Games", "2D Graphics"] },
+      { label: "Categories", values: ["dev", "art"] },
+      { label: "Date", values: ["2021-06-15"] },
+      { label: "Award", values: ["1st Place @ Hydrangea Hacks"] },
+      { label: "Featured", values: ["true"] },
+    ]}
+  />
+</ProjectHeader>
 
-An engaging adventure/platformer game built with JavaScript and the melonJS game engine, featuring immersive gameplay and creative level design.
+<SplitSection>
+  <SectionColumn size={4}>
+    ###### Background
+  </SectionColumn>
+  <SectionColumn size={12}>
+    #### Cero
 
-## Overview
+    <div className="text-lg">
+      An engaging adventure/platformer game built with JavaScript and the melonJS game engine, featuring immersive gameplay and creative level design.
+    </div>
 
-Cero is a 2D platformer that combines adventure elements with classic platforming mechanics. The game was developed using the melonJS engine, demonstrating proficiency in game development and JavaScript programming.
+    <br/><br/><br/>
 
-## Key Features
+    #### Overview
+    Cero is a 2D platformer that combines adventure elements with classic platforming mechanics. The game was developed using the melonJS engine, demonstrating proficiency in game development and JavaScript programming.
+  </SectionColumn>
+  <SectionColumn size={2}>
+  </SectionColumn>
+</SplitSection>
 
-- **2D Platformer Mechanics**: Smooth jumping, movement, and collision detection
-- **Adventure Elements**: Story-driven gameplay with exploration
-- **Level Design**: Creative and challenging level layouts
-- **Web-Based**: Accessible through any modern web browser
-- **Responsive Controls**: Optimized for both keyboard and touch input
+<SplitSection>
+  <SectionColumn size={4}>
+    ###### Implementation
+  </SectionColumn>
+  <SectionColumn size={12}>
+    #### Key Features
+    - **2D Platformer Mechanics**: Smooth jumping, movement, and collision detection
+    - **Adventure Elements**: Story-driven gameplay with exploration
+    - **Level Design**: Creative and challenging level layouts
+    - **Web-Based**: Accessible through any modern web browser
+    - **Responsive Controls**: Optimized for both keyboard and touch input
 
-## Technical Implementation
+    <br/><br/><br/>
 
-Built with JavaScript and the melonJS game engine, the project demonstrates solid understanding of game development principles and web technologies.
+    #### Technical Implementation
+    Built with JavaScript and the melonJS game engine, the project demonstrates solid understanding of game development principles and web technologies.
 
-## Recognition
+    <br/><br/><br/>
 
-This project won 1st Place at Hydrangea Hacks, recognizing its technical achievement and creative design.
+    #### Recognition
+    This project won 1st Place at Hydrangea Hacks, recognizing its technical achievement and creative design.
 
-## Future Development
+    <br/><br/><br/>
 
-- Additional levels and content
-- Enhanced graphics and animations
-- Sound effects and music integration
-- Mobile optimization improvements 
+    #### Future Development
+    - Additional levels and content
+    - Enhanced graphics and animations
+    - Sound effects and music integration
+    - Mobile optimization improvements
+  </SectionColumn>
+  <SectionColumn size={2}>
+  </SectionColumn>
+</SplitSection>
