--- a/content/projects/chipin.mdx
+++ b/content/projects/chipin.mdx
@@ -8,33 +8,70 @@ date: "2024-07-20"
 link: "https://github.com/lilianzlettuce/chip-in"
 ---
 
-# ChipIn
+<ProjectHeader
+  title="ChipIn"
+  description="Household management app that streamlines shared inventory tracking, expense splitting, AI-optimized meal ideas, and other collaborative tools. Built with a group of 4 for Software Engineering I."
+>
+  <ProjectInfo
+    items={[
+      { label: "Tags", values: ["React", "Node.JS", "AI", "MongoDB"] },
+      { label: "Categories", values: ["dev", "design"] },
+      { label: "Date", values: ["2024-07-20"] },
+    ]}
+  />
+</ProjectHeader>
 
-A comprehensive household management application designed to simplify shared living through intelligent inventory tracking, expense management, and AI-powered meal planning.
+<SplitSection>
+  <SectionColumn size={4}>
+    ###### Background
+  </SectionColumn>
+  <SectionColumn size={12}>
+    #### ChipIn
 
-## Overview
+    <div className="text-lg">
+      A comprehensive household management application designed to simplify shared living through intelligent inventory tracking, expense management, and AI-powered meal planning.
+    </div>
 
-ChipIn addresses the common challenges of shared living by providing a centralized platform for managing household tasks, expenses, and meal planning. Built as a team project for Software Engineering I, it demonstrates collaborative development practices.
+    <br/><br/><br/>
 
-## Key Features
+    #### Overview
+    ChipIn addresses the common challenges of shared living by providing a centralized platform for managing household tasks, expenses, and meal planning. Built as a team project for Software Engineering I, it demonstrates collaborative development practices.
+  </SectionColumn>
+  <SectionColumn size={2}>
+  </SectionColumn>
+</SplitSection>
 
-- **Shared Inventory Tracking**: Real-time updates for household items
-- **Expense Splitting**: Automated calculation and tracking of shared costs
-- **AI Meal Planning**: Intelligent suggestions based on available ingredients
-- **Collaborative Tools**: Multiple users can contribute and view updates
-- **Responsive Design**: Works seamlessly across devices
+<SplitSection>
+  <SectionColumn size={4}>
+    ###### Implementation
+  </SectionColumn>
+  <SectionColumn size={12}>
+    #### Key Features
 
-## Technical Implementation
+    - **Shared Inventory Tracking**: Real-time updates for household items
+    - **Expense Splitting**: Automated calculation and tracking of shared costs
+    - **AI Meal Planning**: Intelligent suggestions based on available ingredients
+    - **Collaborative Tools**: Multiple users can contribute and view updates
+    - **Responsive Design**: Works seamlessly across devices
 
-Built with React and Firebase, the app leverages cloud services for real-time collaboration and data persistence across multiple users.
+    <br/><br/><br/>
 
-## Team Development
+    #### Technical Implementation
+    Built with React and Firebase, the app leverages cloud services for real-time collaboration and data persistence across multiple users.
 
-This project was developed by a team of 4 students, demonstrating effective collaboration, version control, and software engineering best practices.
+    <br/><br/><br/>
 
-## Future Enhancements
+    #### Team Development
+    This project was developed by a team of 4 students, demonstrating effective collaboration, version control, and software engineering best practices.
 
-- Advanced AI meal recommendations
-- Integration with grocery delivery services
-- Calendar integration for meal planning
-- Enhanced expense analytics 
+    <br/><br/><br/>
+
+    #### Future Enhancements
+    - Advanced AI meal recommendations
+    - Integration with grocery delivery services
+    - Calendar integration for meal planning
+    - Enhanced expense analytics
+  </SectionColumn>
+  <SectionColumn size={2}>
+  </SectionColumn>
+</SplitSection>
