--- a/content/projects/escape-room.mdx
+++ b/content/projects/escape-room.mdx
@@ -8,34 +8,70 @@ date: "2020-12-15"
 link: "https://lilianzlettuce.github.io/escapeRoom"
 ---
 
-# Escape Room
+<ProjectHeader
+  title="Escape Room"
+  description="An online escape room with creative puzzles and intentionally nonsensical logic."
+>
+  <ProjectInfo
+    items={[
+      { label: "Tags", values: ["JavaScript", "HTML", "CSS", "Puzzle Game", "Escape Room", "Interactive Story", "Web Games"] },
+      { label: "Categories", values: ["dev", "design"] },
+      { label: "Date", values: ["2020-12-15"] },
+    ]}
+  />
+</ProjectHeader>
 
-An interactive online escape room experience featuring creative puzzles and nonsensical logic that challenges players to think outside the box.
+<SplitSection>
+  <SectionColumn size={4}>
+    ###### Background
+  </SectionColumn>
+  <SectionColumn size={12}>
+    #### Escape Room
 
-## Overview
+    <div className="text-lg">
+      An interactive online escape room experience featuring creative puzzles and nonsensical logic that challenges players to think outside the box.
+    </div>
 
-This project creates a digital escape room experience with unique puzzles and challenges that reflect creative problem-solving and unconventional thinking. The game combines storytelling with interactive elements to create an engaging experience.
+    <br/><br/><br/>
 
-## Key Features
+    #### Overview
+    This project creates a digital escape room experience with unique puzzles and challenges that reflect creative problem-solving and unconventional thinking. The game combines storytelling with interactive elements to create an engaging experience.
+  </SectionColumn>
+  <SectionColumn size={2}>
+  </SectionColumn>
+</SplitSection>
 
-- **Interactive Puzzles**: Multiple challenging puzzles to solve
-- **Story-Driven**: Narrative elements that guide the experience
-- **Creative Logic**: Unique puzzle designs that break conventional thinking
-- **Progressive Difficulty**: Increasingly complex challenges
-- **Responsive Design**: Works across different devices
-- **Immersive Experience**: Engaging visual and audio elements
+<SplitSection>
+  <SectionColumn size={4}>
+    ###### Implementation
+  </SectionColumn>
+  <SectionColumn size={12}>
+    #### Key Features
+    - **Interactive Puzzles**: Multiple challenging puzzles to solve
+    - **Story-Driven**: Narrative elements that guide the experience
+    - **Creative Logic**: Unique puzzle designs that break conventional thinking
+    - **Progressive Difficulty**: Increasingly complex challenges
+    - **Responsive Design**: Works across different devices
+    - **Immersive Experience**: Engaging visual and audio elements
 
-## Technical Implementation
+    <br/><br/><br/>
 
-Built with JavaScript, HTML, and CSS, the project demonstrates creativity in game design and user interaction patterns.
+    #### Technical Implementation
+    Built with JavaScript, HTML, and CSS, the project demonstrates creativity in game design and user interaction patterns.
 
-## Creative Vision
+    <br/><br/><br/>
 
-The escape room features puzzles that intentionally subvert expectations, requiring players to approach problems from unconventional angles and embrace creative thinking.
+    #### Creative Vision
+    The escape room features puzzles that intentionally subvert expectations, requiring players to approach problems from unconventional angles and embrace creative thinking.
 
-## Future Development
+    <br/><br/><br/>
 
-- Additional puzzle rooms and levels
-- Enhanced visual effects and animations
-- Sound design and audio cues
-- Multiplayer collaboration features 
+    #### Future Development
+    - Additional puzzle rooms and levels
+    - Enhanced visual effects and animations
+    - Sound design and audio cues
+    - Multiplayer collaboration features
+  </SectionColumn>
+  <SectionColumn size={2}>
+  </SectionColumn>
+</SplitSection>
