--- a/content/projects/linescape.mdx
+++ b/content/projects/linescape.mdx
@@ -9,37 +9,75 @@ award: "Best Design @ Superposition V"
 link: "https://lilianzlettuce.github.io/linescape-vh"
 ---
 
-# LineScape
+<ProjectHeader
+  title="LineScape"
+  description="An SVG drawing tool that simplifies creating line animations for the web."
+>
+  <ProjectInfo
+    items={[
+      { label: "Tags", values: ["SVG", "Animation", "Drawing Tool", "Web Development", "Creative Coding", "Design Tools"] },
+      { label: "Categories", values: ["dev", "design"] },
+      { label: "Date", values: ["2021-04-15"] },
+      { label: "Award", values: ["Best Design @ Superposition V"] },
+    ]}
+  />
+</ProjectHeader>
 
-An innovative SVG drawing tool that simplifies the creation of line animations for websites, making complex animations accessible to designers and developers.
+<SplitSection>
+  <SectionColumn size={4}>
+    ###### Background
+  </SectionColumn>
+  <SectionColumn size={12}>
+    #### LineScape
 
-## Overview
+    <div className="text-lg">
+      An innovative SVG drawing tool that simplifies the creation of line animations for websites, making complex animations accessible to designers and developers.
+    </div>
 
-LineScape addresses the challenge of creating smooth, performant line animations for web projects by providing an intuitive interface for drawing and animating SVG paths. The tool streamlines the process of creating engaging visual effects.
+    <br/><br/><br/>
 
-## Key Features
+    #### Overview
+    LineScape addresses the challenge of creating smooth, performant line animations for web projects by providing an intuitive interface for drawing and animating SVG paths. The tool streamlines the process of creating engaging visual effects.
+  </SectionColumn>
+  <SectionColumn size={2}>
+  </SectionColumn>
+</SplitSection>
 
-- **SVG Drawing Interface**: Intuitive tools for creating line paths
-- **Animation Controls**: Precise control over timing and easing
-- **Export Functionality**: Generate code for web implementation
-- **Performance Optimized**: Lightweight animations for smooth playback
-- **Cross-Browser Compatible**: Works across all modern browsers
+<SplitSection>
+  <SectionColumn size={4}>
+    ###### Implementation
+  </SectionColumn>
+  <SectionColumn size={12}>
+    #### Key Features
+    - **SVG Drawing Interface**: Intuitive tools for creating line paths
+    - **Animation Controls**: Precise control over timing and easing
+    - **Export Functionality**: Generate code for web implementation
+    - **Performance Optimized**: Lightweight animations for smooth playback
+    - **Cross-Browser Compatible**: Works across all modern browsers
 
-## Technical Implementation
+    <br/><br/><br/>
 
-Built with JavaScript and SVG technologies, the tool demonstrates deep understanding of web animation principles and vector graphics.
+    #### Technical Implementation
+    Built with JavaScript and SVG technologies, the tool demonstrates deep understanding of web animation principles and vector graphics.
 
-## Recognition
+    <br/><br/><br/>
 
-This project won Best Design at Superposition V, recognizing its innovative approach to design tools and user experience.
+    #### Recognition
+    This project won Best Design at Superposition V, recognizing its innovative approach to design tools and user experience.
 
-## Impact
+    <br/><br/><br/>
 
-LineScape has the potential to democratize complex web animations, making them accessible to designers and developers of all skill levels.
+    #### Impact
+    LineScape has the potential to democratize complex web animations, making them accessible to designers and developers of all skill levels.
 
-## Future Development
+    <br/><br/><br/>
 
-- Advanced animation presets
-- Real-time collaboration features
-- Integration with design tools
-- Enhanced export options for various frameworks 
+    #### Future Development
+    - Advanced animation presets
+    - Real-time collaboration features
+    - Integration with design tools
+    - Enhanced export options for various frameworks
+  </SectionColumn>
+  <SectionColumn size={2}>
+  </SectionColumn>
+</SplitSection>
