--- a/content/projects/ml-hacks.mdx
+++ b/content/projects/ml-hacks.mdx
@@ -8,33 +8,70 @@ date: "2022-03-15"
 link: "https://mlhacks2022.vercel.app/"
 ---
 
-# ML Hacks
+<ProjectHeader
+  title="ML Hacks"
+  description="Website for ML Hacks, Bay Area's premier Machine Learning focused hackathon for female and nonbinary high school students."
+>
+  <ProjectInfo
+    items={[
+      { label: "Tags", values: ["Hackathon", "Web Development", "Machine Learning"] },
+      { label: "Categories", values: ["dev", "design"] },
+      { label: "Date", values: ["2022-03-15"] },
+    ]}
+  />
+</ProjectHeader>
 
-A comprehensive website for ML Hacks, the Bay Area's premier machine learning hackathon specifically designed for female and nonbinary high school students.
+<SplitSection>
+  <SectionColumn size={4}>
+    ###### Background
+  </SectionColumn>
+  <SectionColumn size={12}>
+    #### ML Hacks
 
-## Overview
+    <div className="text-lg">
+      A comprehensive website for ML Hacks, the Bay Area's premier machine learning hackathon specifically designed for female and nonbinary high school students.
+    </div>
 
-This project serves as the central digital platform for ML Hacks, an inclusive hackathon that promotes diversity in machine learning and technology. The website provides information, registration, and resources for participants.
+    <br/><br/><br/>
 
-## Key Features
+    #### Overview
+    This project serves as the central digital platform for ML Hacks, an inclusive hackathon that promotes diversity in machine learning and technology. The website provides information, registration, and resources for participants.
+  </SectionColumn>
+  <SectionColumn size={2}>
+  </SectionColumn>
+</SplitSection>
 
-- **Inclusive Design**: Specifically designed for female and nonbinary students
-- **Educational Resources**: Access to ML tutorials and learning materials
-- **Registration System**: Streamlined sign-up process for participants
-- **Event Information**: Clear communication of hackathon details and logistics
-- **Community Building**: Platform for connecting participants and mentors
+<SplitSection>
+  <SectionColumn size={4}>
+    ###### Implementation
+  </SectionColumn>
+  <SectionColumn size={12}>
+    #### Key Features
 
-## Technical Implementation
+    - **Inclusive Design**: Specifically designed for female and nonbinary students
+    - **Educational Resources**: Access to ML tutorials and learning materials
+    - **Registration System**: Streamlined sign-up process for participants
+    - **Event Information**: Clear communication of hackathon details and logistics
+    - **Community Building**: Platform for connecting participants and mentors
 
-Built with modern web technologies to ensure accessibility and performance for a diverse audience of high school students.
+    <br/><br/><br/>
 
-## Impact
+    #### Technical Implementation
+    Built with modern web technologies to ensure accessibility and performance for a diverse audience of high school students.
 
-The website plays a crucial role in promoting diversity in machine learning by making the hackathon accessible and welcoming to underrepresented groups in tech.
+    <br/><br/><br/>
 
-## Future Enhancements
+    #### Impact
+    The website plays a crucial role in promoting diversity in machine learning by making the hackathon accessible and welcoming to underrepresented groups in tech.
 
-- Live streaming capabilities for workshops
-- Interactive learning modules
-- Mentor matching system
-- Project showcase gallery 
+    <br/><br/><br/>
+
+    #### Future Enhancements
+    - Live streaming capabilities for workshops
+    - Interactive learning modules
+    - Mentor matching system
+    - Project showcase gallery
+  </SectionColumn>
+  <SectionColumn size={2}>
+  </SectionColumn>
+</SplitSection>
