--- a/content/projects/scout.mdx
+++ b/content/projects/scout.mdx
@@ -56,10 +56,10 @@ link: "https://www.scoutforschools.com/"
 </SplitSection>
 
 <SplitSection>
-  <SectionColumn size={3}>
+  <SectionColumn size={4}>
     ###### Implementation
   </SectionColumn>
-  <SectionColumn size={10}>
+  <SectionColumn size={12}>
     #### Custom-coded Site
 
     We decided on a modern Next.js/React/Typescript stack for its scalability and performance. 
@@ -90,8 +90,10 @@ link: "https://www.scoutforschools.com/"
     Challenges with strict typing in Typescript, had to find workaround
 
     <br/><br/><br/>
-    
+
     #### Accessible and Mobile-Friendly
     Ensured delightful UI/UX across all devices with responsive resizing and cross-platform compatibility.
+  </SectionColumn>
+  <SectionColumn size={2}>
   </SectionColumn>
 </SplitSection>
