--- a/content/projects/snowball.mdx
+++ b/content/projects/snowball.mdx
@@ -9,37 +9,75 @@ award: "Best Overall Hack @ Creatica"
 link: "https://devpost.com/software/dodoplier"
 ---
 
-# Snowball
+<ProjectHeader
+  title="Snowball"
+  description="A crowdfunding Android app that maximizes donation impact via corporate matching."
+>
+  <ProjectInfo
+    items={[
+      { label: "Tags", values: ["Android", "Java", "Mobile App", "Social Impact", "Corporate Matching"] },
+      { label: "Categories", values: ["dev", "design"] },
+      { label: "Date", values: ["2020-10-15"] },
+      { label: "Award", values: ["Best Overall Hack @ Creatica"] },
+    ]}
+  />
+</ProjectHeader>
 
-A revolutionary crowdfunding Android application designed to maximize the impact of individual donations by leveraging corporate matching programs.
+<SplitSection>
+  <SectionColumn size={4}>
+    ###### Background
+  </SectionColumn>
+  <SectionColumn size={12}>
+    #### Snowball
 
-## Overview
+    <div className="text-lg">
+      A revolutionary crowdfunding Android application designed to maximize the impact of individual donations by leveraging corporate matching programs.
+    </div>
 
-Snowball addresses the challenge of maximizing charitable impact by connecting individual donors with corporate matching opportunities. The app streamlines the process of finding and utilizing corporate matching programs to double or triple the impact of donations.
+    <br/><br/><br/>
 
-## Key Features
+    #### Overview
+    Snowball addresses the challenge of maximizing charitable impact by connecting individual donors with corporate matching opportunities. The app streamlines the process of finding and utilizing corporate matching programs to double or triple the impact of donations.
+  </SectionColumn>
+  <SectionColumn size={2}>
+  </SectionColumn>
+</SplitSection>
 
-- **Corporate Matching Discovery**: Automated identification of matching opportunities
-- **Donation Tracking**: Comprehensive tracking of donations and matches
-- **Impact Visualization**: Clear metrics showing the amplified impact
-- **User-Friendly Interface**: Intuitive design for seamless donation experience
-- **Real-Time Updates**: Live tracking of matching status and progress
+<SplitSection>
+  <SectionColumn size={4}>
+    ###### Implementation
+  </SectionColumn>
+  <SectionColumn size={12}>
+    #### Key Features
+    - **Corporate Matching Discovery**: Automated identification of matching opportunities
+    - **Donation Tracking**: Comprehensive tracking of donations and matches
+    - **Impact Visualization**: Clear metrics showing the amplified impact
+    - **User-Friendly Interface**: Intuitive design for seamless donation experience
+    - **Real-Time Updates**: Live tracking of matching status and progress
 
-## Technical Implementation
+    <br/><br/><br/>
 
-Built as an Android application using modern mobile development practices, the app integrates with various APIs to provide comprehensive matching information.
+    #### Technical Implementation
+    Built as an Android application using modern mobile development practices, the app integrates with various APIs to provide comprehensive matching information.
 
-## Recognition
+    <br/><br/><br/>
 
-This project won Best Overall Hack at Creatica, recognizing its innovative approach to social impact and technical execution.
+    #### Recognition
+    This project won Best Overall Hack at Creatica, recognizing its innovative approach to social impact and technical execution.
 
-## Impact
+    <br/><br/><br/>
 
-The app has the potential to significantly increase charitable giving by making corporate matching programs more accessible and transparent to individual donors.
+    #### Impact
+    The app has the potential to significantly increase charitable giving by making corporate matching programs more accessible and transparent to individual donors.
 
-## Future Enhancements
+    <br/><br/><br/>
 
-- Integration with more corporate matching programs
-- Advanced analytics and reporting
-- Social sharing features
-- Gamification elements to encourage giving 
+    #### Future Enhancements
+    - Integration with more corporate matching programs
+    - Advanced analytics and reporting
+    - Social sharing features
+    - Gamification elements to encourage giving
+  </SectionColumn>
+  <SectionColumn size={2}>
+  </SectionColumn>
+</SplitSection>
