--- a/content/projects/space-guy.mdx
+++ b/content/projects/space-guy.mdx
@@ -8,34 +8,70 @@ date: "2020-08-15"
 link: ""
 ---
 
-# Space Guy
+<ProjectHeader
+  title="Space Guy"
+  description="A 2D space-themed platformer built by a team of 5 using Unity."
+>
+  <ProjectInfo
+    items={[
+      { label: "Tags", values: ["Unity", "Game Development", "2D Platformer", "C#"] },
+      { label: "Categories", values: ["dev", "art"] },
+      { label: "Date", values: ["2020-08-15"] },
+    ]}
+  />
+</ProjectHeader>
 
-A 2D space-themed platformer game developed collaboratively with a team of 5 using Unity, featuring engaging gameplay and creative level design.
+<SplitSection>
+  <SectionColumn size={4}>
+    ###### Background
+  </SectionColumn>
+  <SectionColumn size={12}>
+    #### Space Guy
 
-## Overview
+    <div className="text-lg">
+      A 2D space-themed platformer game developed collaboratively with a team of 5 using Unity, featuring engaging gameplay and creative level design.
+    </div>
 
-Space Guy is a collaborative game development project that demonstrates teamwork, Unity proficiency, and creative game design. The project combines platforming mechanics with space-themed aesthetics to create an engaging player experience.
+    <br/><br/><br/>
 
-## Key Features
+    #### Overview
+    Space Guy is a collaborative game development project that demonstrates teamwork, Unity proficiency, and creative game design. The project combines platforming mechanics with space-themed aesthetics to create an engaging player experience.
+  </SectionColumn>
+  <SectionColumn size={2}>
+  </SectionColumn>
+</SplitSection>
 
-- **2D Platformer Mechanics**: Smooth movement, jumping, and collision detection
-- **Space Theme**: Unique visual design and atmospheric elements
-- **Level Design**: Creative and challenging environments
-- **Team Collaboration**: Developed by 5 team members
-- **Unity Engine**: Professional game development tools
-- **C# Programming**: Object-oriented game logic implementation
+<SplitSection>
+  <SectionColumn size={4}>
+    ###### Implementation
+  </SectionColumn>
+  <SectionColumn size={12}>
+    #### Key Features
+    - **2D Platformer Mechanics**: Smooth movement, jumping, and collision detection
+    - **Space Theme**: Unique visual design and atmospheric elements
+    - **Level Design**: Creative and challenging environments
+    - **Team Collaboration**: Developed by 5 team members
+    - **Unity Engine**: Professional game development tools
+    - **C# Programming**: Object-oriented game logic implementation
 
-## Technical Implementation
+    <br/><br/><br/>
 
-Built with Unity and C#, the project demonstrates proficiency in game development workflows and collaborative software development practices.
+    #### Technical Implementation
+    Built with Unity and C#, the project demonstrates proficiency in game development workflows and collaborative software development practices.
 
-## Team Development
+    <br/><br/><br/>
 
-This project showcases effective teamwork in game development, with 5 team members contributing to different aspects of the game including programming, art, design, and testing.
+    #### Team Development
+    This project showcases effective teamwork in game development, with 5 team members contributing to different aspects of the game including programming, art, design, and testing.
 
-## Future Development
+    <br/><br/><br/>
 
-- Additional levels and content
-- Enhanced graphics and animations
-- Sound effects and music integration
-- Multiplayer features 
+    #### Future Development
+    - Additional levels and content
+    - Enhanced graphics and animations
+    - Sound effects and music integration
+    - Multiplayer features
+  </SectionColumn>
+  <SectionColumn size={2}>
+  </SectionColumn>
+</SplitSection>
