--- a/content/projects/tetris.mdx
+++ b/content/projects/tetris.mdx
@@ -8,34 +8,71 @@ date: "2020-09-15"
 link: "https://lilianzlettuce.github.io/tetris"
 ---
 
-# Tetris
+<ProjectHeader
+  title="Tetris"
+  description="Tetris remade. A faithful recreation of the classic puzzle game with smooth gameplay and responsive design."
+>
+  <ProjectInfo
+    items={[
+      { label: "Tags", values: ["JavaScript", "Game Development", "Classic Games", "Tetris", "Web Games", "HTML", "CSS"] },
+      { label: "Categories", values: ["dev", "design"] },
+      { label: "Date", values: ["2020-09-15"] },
+    ]}
+  />
+</ProjectHeader>
 
-A faithful recreation of the classic Tetris puzzle game, built with modern web technologies and featuring smooth gameplay mechanics.
+<SplitSection>
+  <SectionColumn size={4}>
+    ###### Background
+  </SectionColumn>
+  <SectionColumn size={12}>
+    #### Tetris
 
-## Overview
+    <div className="text-lg">
+      A faithful recreation of the classic Tetris puzzle game, built with modern web technologies and featuring smooth gameplay mechanics.
+    </div>
 
-This project recreates the timeless Tetris game with clean, efficient code and responsive design. The implementation focuses on capturing the essence of the original game while adding modern web capabilities.
+    <br/><br/><br/>
 
-## Key Features
+    #### Overview
+    This project recreates the timeless Tetris game with clean, efficient code and responsive design. The implementation focuses on capturing the essence of the original game while adding modern web capabilities.
+  </SectionColumn>
+  <SectionColumn size={2}>
+  </SectionColumn>
+</SplitSection>
 
-- **Classic Gameplay**: Faithful recreation of original Tetris mechanics
-- **Smooth Controls**: Responsive keyboard and touch input
-- **Score System**: Traditional Tetris scoring with line clears
-- **Level Progression**: Increasing speed and difficulty
-- **Responsive Design**: Works across desktop and mobile devices
-- **Clean Interface**: Minimalist design focused on gameplay
+<SplitSection>
+  <SectionColumn size={4}>
+    ###### Implementation
+  </SectionColumn>
+  <SectionColumn size={12}>
+    #### Key Features
 
-## Technical Implementation
+    - **Classic Gameplay**: Faithful recreation of original Tetris mechanics
+    - **Smooth Controls**: Responsive keyboard and touch input
+    - **Score System**: Traditional Tetris scoring with line clears
+    - **Level Progression**: Increasing speed and difficulty
+    - **Responsive Design**: Works across desktop and mobile devices
+    - **Clean Interface**: Minimalist design focused on gameplay
 
-Built with vanilla JavaScript, HTML, and CSS, the project demonstrates solid understanding of game development fundamentals and web technologies.
+    <br/><br/><br/>
 
-## Game Mechanics
+    #### Technical Implementation
+    Built with vanilla JavaScript, HTML, and CSS, the project demonstrates solid understanding of game development fundamentals and web technologies.
 
-The game follows classic Tetris rules where players rotate and position falling tetromino pieces to create complete horizontal lines, with the game ending when pieces reach the top.
+    <br/><br/><br/>
 
-## Future Enhancements
+    #### Game Mechanics
+    The game follows classic Tetris rules where players rotate and position falling tetromino pieces to create complete horizontal lines, with the game ending when pieces reach the top.
 
-- Hold piece functionality
-- Advanced scoring systems
-- Multiple game modes
-- Sound effects and music 
+    <br/><br/><br/>
+
+    #### Future Enhancements
+    - Hold piece functionality
+    - Advanced scoring systems
+    - Multiple game modes
+    - Sound effects and music
+  </SectionColumn>
+  <SectionColumn size={2}>
+  </SectionColumn>
+</SplitSection>
