--- a/content/projects/wooden-toy.mdx
+++ b/content/projects/wooden-toy.mdx
@@ -8,34 +8,70 @@ date: "2020-03-15"
 link: ""
 ---
 
-# Wooden Toy
+<ProjectHeader
+  title="Wooden Toy"
+  description="A Pacman-themed wooden toy with laser-cut interactive parts, modeled in Autodesk Inventor."
+>
+  <ProjectInfo
+    items={[
+      { label: "Tags", values: ["Autodesk Inventor", "Laser Cutting", "Woodworking", "Pacman", "Interactive Design", "Physical Prototyping"] },
+      { label: "Categories", values: ["fabrication", "design"] },
+      { label: "Date", values: ["2020-03-15"] },
+    ]}
+  />
+</ProjectHeader>
 
-A Pacman-themed wooden toy featuring laser-cut interactive parts, designed and modeled using Autodesk Inventor for precise fabrication.
+<SplitSection>
+  <SectionColumn size={4}>
+    ###### Background
+  </SectionColumn>
+  <SectionColumn size={12}>
+    #### Wooden Toy
 
-## Overview
+    <div className="text-lg">
+      A Pacman-themed wooden toy featuring laser-cut interactive parts, designed and modeled using Autodesk Inventor for precise fabrication.
+    </div>
 
-This project combines digital design with physical fabrication to create an interactive wooden toy inspired by the classic Pacman game. The design demonstrates proficiency in CAD modeling and understanding of manufacturing processes.
+    <br/><br/><br/>
 
-## Key Features
+    #### Overview
+    This project combines digital design with physical fabrication to create an interactive wooden toy inspired by the classic Pacman game. The design demonstrates proficiency in CAD modeling and understanding of manufacturing processes.
+  </SectionColumn>
+  <SectionColumn size={2}>
+  </SectionColumn>
+</SplitSection>
 
-- **Pacman Theme**: Creative interpretation of the classic arcade game
-- **Interactive Parts**: Movable and engaging components
-- **Laser-Cut Precision**: Accurate fabrication using laser cutting technology
-- **CAD Design**: Detailed modeling with Autodesk Inventor
-- **Wooden Construction**: Natural materials for tactile experience
-- **Educational Value**: Demonstrates design-to-fabrication workflow
+<SplitSection>
+  <SectionColumn size={4}>
+    ###### Implementation
+  </SectionColumn>
+  <SectionColumn size={12}>
+    #### Key Features
+    - **Pacman Theme**: Creative interpretation of the classic arcade game
+    - **Interactive Parts**: Movable and engaging components
+    - **Laser-Cut Precision**: Accurate fabrication using laser cutting technology
+    - **CAD Design**: Detailed modeling with Autodesk Inventor
+    - **Wooden Construction**: Natural materials for tactile experience
+    - **Educational Value**: Demonstrates design-to-fabrication workflow
 
-## Technical Implementation
+    <br/><br/><br/>
 
-Designed using Autodesk Inventor for precise CAD modeling, with components fabricated using laser cutting technology for accurate assembly and fit.
+    #### Technical Implementation
+    Designed using Autodesk Inventor for precise CAD modeling, with components fabricated using laser cutting technology for accurate assembly and fit.
 
-## Design Process
+    <br/><br/><br/>
 
-The project showcases the complete design workflow from concept to physical prototype, including 3D modeling, tolerance analysis, and manufacturing considerations.
+    #### Design Process
+    The project showcases the complete design workflow from concept to physical prototype, including 3D modeling, tolerance analysis, and manufacturing considerations.
 
-## Future Development
+    <br/><br/><br/>
 
-- Additional game themes and variations
-- Enhanced interactive mechanisms
-- Mass production considerations
-- Educational kit development 
+    #### Future Development
+    - Additional game themes and variations
+    - Enhanced interactive mechanisms
+    - Mass production considerations
+    - Educational kit development
+  </SectionColumn>
+  <SectionColumn size={2}>
+  </SectionColumn>
+</SplitSection>
