--- a/content/projects/veracity.mdx
+++ b/content/projects/veracity.mdx
@@ -8,33 +8,70 @@ date: "2020-11-15"
 link: "https://lilianzlettuce.github.io/veracity"
 ---
 
-# Veracity
+<ProjectHeader
+  title="Veracity"
+  description="A web application interface designed for charity searching and discovery, built to help users find and evaluate charitable organizations."
+>
+  <ProjectInfo
+    items={[
+      { label: "Tags", values: ["React", "Charity", "Web App", "API Integration", "Search Interface", "Social Impact"] },
+      { label: "Categories", values: ["dev", "design"] },
+      { label: "Date", values: ["2020-11-15"] },
+    ]}
+  />
+</ProjectHeader>
 
-A web application interface designed for charity searching and discovery, built to help users find and evaluate charitable organizations.
+<SplitSection>
+  <SectionColumn size={4}>
+    ###### Background
+  </SectionColumn>
+  <SectionColumn size={12}>
+    #### Veracity
 
-## Overview
+    <div className="text-lg">
+      A web application interface designed for charity searching and discovery, built to help users find and evaluate charitable organizations.
+    </div>
 
-Veracity was created to simplify the process of finding and researching charitable organizations. The application provided an intuitive interface for users to search, compare, and learn about various charities and their impact.
+    <br/><br/><br/>
 
-## Key Features
+    #### Overview
+    Veracity was created to simplify the process of finding and researching charitable organizations. The application provided an intuitive interface for users to search, compare, and learn about various charities and their impact.
+  </SectionColumn>
+  <SectionColumn size={2}>
+  </SectionColumn>
+</SplitSection>
 
-- **Charity Search**: Comprehensive database of charitable organizations
-- **Information Display**: Detailed profiles and impact metrics
-- **User-Friendly Interface**: Intuitive design for easy navigation
-- **API Integration**: Connected to charity databases for real-time data
-- **Responsive Design**: Accessible across all devices
+<SplitSection>
+  <SectionColumn size={4}>
+    ###### Implementation
+  </SectionColumn>
+  <SectionColumn size={12}>
+    #### Key Features
 
-## Technical Implementation
+    - **Charity Search**: Comprehensive database of charitable organizations
+    - **Information Display**: Detailed profiles and impact metrics
+    - **User-Friendly Interface**: Intuitive design for easy navigation
+    - **API Integration**: Connected to charity databases for real-time data
+    - **Responsive Design**: Accessible across all devices
 
-Built with modern web technologies, the application integrated with external APIs to provide comprehensive charity information and search capabilities.
+    <br/><br/><br/>
 
-## Project Status
+    #### Technical Implementation
+    Built with modern web technologies, the application integrated with external APIs to provide comprehensive charity information and search capabilities.
 
-The application is no longer running due to API restrictions, but the project demonstrates proficiency in web development and API integration.
+    <br/><br/><br/>
 
-## Future Possibilities
+    #### Project Status
+    The application is no longer running due to API restrictions, but the project demonstrates proficiency in web development and API integration.
 
-- Integration with alternative charity databases
-- Enhanced search and filtering capabilities
-- User reviews and ratings system
-- Donation tracking features 
+    <br/><br/><br/>
+
+    #### Future Possibilities
+    - Integration with alternative charity databases
+    - Enhanced search and filtering capabilities
+    - User reviews and ratings system
+    - Donation tracking features
+  </SectionColumn>
+  <SectionColumn size={2}>
+  </SectionColumn>
+</SplitSection>
